--- a/styles.css
+++ b/styles.css
@@ -35,9 +35,9 @@ html {
     bottom: 0px;
 }
 
-.home{
-    padding-left: 8px;
-    padding-top: 8px;
+a.home{
+    margin-top: 8px;
+    margin-left: 8px;
 }
 
 .nav-tabs .nav-link{
