--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,3 @@
-html {
-
-}
-
 .menu1,
 .menu2,
 .menu3,
@@ -14,32 +10,86 @@ html {
     top: 0px;
     right: 0px;
     width: 105%;
-    /* height: 100%; */
-    background-color: gray;
-    border-radius: 0 0 0 10px;
+    height: 962px;
+    background-color: white;
     padding-right: 0%;
 }
 
-.canvas {
-    position: absolute;
-    float: left;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    width: 100%;
-    height: 100%;
-    left: 0px;
-    right: 0px;
-    top: 0px;
-    bottom: 0px;
+.tab1 {
+	float: left;
+
+	/* width: 100px;
+    height: 35px; */
+
+    /* padding-top: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px; */
+
+    outline: 4px solid transparent;
+
+	position: relative;
+
+    background: #fff;
+    
+	border-top-left-radius: 4px;
+	border-top-right-radius: 4px;
 }
 
-a.home{
-    margin-top: 8px;
-    margin-left: 8px;
+.tab1:before {
+	content: "";
+	position: absolute;
+
+    outline: 4px solid transparent;
+
+	height: 10px;
+	width: 20px;
+
+	bottom: 0;
 }
 
-.nav-tabs .nav-link{
-    border-radius: 4px;
+.tab1:before {
+    left: -20px;
+    outline: 4px solid transparent;
+	border-radius: 0 0 4px 0;
+	box-shadow: 10px 0 0 0 rgb(255, 255, 255);
+}
+
+.tab2 {
+	float: left;
+
+	/* width: 100px;
+    height: 35px; */
+    
+    /* padding-top: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px; */
+
+	position: relative;
+
+    background: #fff;
+    
+	border-top-left-radius: 4px;
+	border-top-right-radius: 4px;
+}
+
+.tab3 {
+	float: left;
+
+	/* width: 100px;
+    height: 35px; */
+    
+    /* padding-top: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px; */
+
+	position: relative;
+
+	background: #fff;
+
+	border-top-left-radius: 4px;
+	border-top-right-radius: 4px;
+}
+
+.tabText{
+    box-sizing: border-box;
 }
