.panel height fixed

--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body{
     top: 0px;
     right: 0px;
     width: 105%;
-    height: 962px;
+    height: 100vh;
     background-color: white;
     padding-right: 0%;
 }
