--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ body{
 	position: relative;
 
     background: #fff;
-    
+
 	border-top-left-radius: 4px;
 	border-top-right-radius: 4px;
 }
@@ -43,9 +43,7 @@ body{
 	content: "";
 	position: absolute;
 
-    outline: 4px solid transparent;
-
-	height: 10px;
+	height: 20px;
 	width: 20px;
 
 	bottom: 0;
@@ -55,7 +53,7 @@ body{
     left: -20px;
     outline: 4px solid transparent;
 	border-radius: 0 0 4px 0;
-	box-shadow: 10px 0 0 0 rgb(255, 255, 255);
+	box-shadow: 10px 0 0 0 #ffffff;
 }
 
 .tab2 {
@@ -63,7 +61,7 @@ body{
 
 	/* width: 100px;
     height: 35px; */
-    
+
     /* padding-top: 10px;
     padding-right: 10px;
     padding-bottom: 10px; */
@@ -71,7 +69,7 @@ body{
 	position: relative;
 
     background: #fff;
-    
+
 	border-top-left-radius: 4px;
 	border-top-right-radius: 4px;
 }
@@ -81,7 +79,7 @@ body{
 
 	/* width: 100px;
     height: 35px; */
-    
+
     /* padding-top: 10px;
     padding-right: 10px;
     padding-bottom: 10px; */
@@ -94,6 +92,7 @@ body{
 	border-top-right-radius: 4px;
 }
 
-.tabText{
+a.tabText{
     box-sizing: border-box;
+    padding-right: 48px;
 }
