--- a/styles.css
+++ b/styles.css
@@ -9,14 +9,22 @@ body{
     width: 100%;
 }
 
+.home{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 80%;
+}
+
 .panel {
-    float: right;
     top: 0px;
     right: 0px;
-    width: 105%;
+    width: 20%;
     height: 100vh;
     background-color: white;
     padding-right: 0%;
+
+    position: absolute;
 }
 
 .tab1 {
