--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,9 +30,12 @@ body{
 }
 
 .panel {
+    box-sizing: content-box;
     top: 0px;
     right: 0px;
-    width: 20%;
+    width: 20% !important;
+    position: relative;
+    overflow: auto;
     height: 100vh;
     background-color: white;
     padding-right: 0%;
@@ -78,5 +81,37 @@ a.homeTab {
 
 #jsmind_container{
     width: 1536px;
-    height: 100vh;
+    height: 80vh;
+}
+
+.menu1Open{
+    height: 385px;
+}
+
+.project{
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+/* Let's get this party started */
+::-webkit-scrollbar {
+    width: 7px;
+}
+ 
+/* Track */
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: #f8f9fa; 
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}
+::-webkit-scrollbar-thumb:window-inactive {
+	background: rgba(255,0,0,0.4); 
 }
