--- a/styles/styles.css
+++ b/styles/styles.css
@@ -113,5 +113,5 @@ a.homeTab {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
 }
 ::-webkit-scrollbar-thumb:window-inactive {
-	background: rgba(255,0,0,0.4); 
+	background:#f8f9fa; 
 }
