--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,10 +1,18 @@
 html{
     box-sizing: border-box;
+    overflow:  hidden;
 }
 
 *, *:before, *:after{
     box-sizing: border-box;
 }
+
+.wrapper {
+    display: flex;
+    width: 100%;
+    align-items: stretch;
+}
+
 .menu1{
     margin-top: 20px;
     margin-bottom: 20px;
@@ -23,27 +31,18 @@ body{
 }
 
 .home{
-    position: absolute;
+    /* position: absolute;
     left: 0;
     top: 0;
-    width: 80%;
+    width: 80%; */
+    
 }
 
-.panel {
-    box-sizing: content-box;
-    top: 0px;
-    right: 0px;
-    width: 20% !important;
-    position: relative;
-    overflow: auto;
-    height: 100vh;
-    background-color: white;
-    padding-right: 0%;
-
-    box-shadow: 5px 0px 20px 1px #000;
-
-    position: absolute;
+#sidebar {
+    min-height: 100vh;
+    box-shadow: -15px 0px 50px -9px #000000;
 }
+
 
 a.homeTab {
 	border-top-left-radius: 4px;
@@ -88,25 +87,124 @@ a.homeTab {
     margin-right: 10px;
 }
 
-/* Let's get this party started */
-::-webkit-scrollbar {
-    width: 7px;
-}
- 
-/* Track */
-::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
-    -webkit-border-radius: 10px;
-    border-radius: 10px;
-}
- 
-/* Handle */
-::-webkit-scrollbar-thumb {
-    -webkit-border-radius: 10px;
-    border-radius: 10px;
-    background: #f8f9fa; 
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
-}
-::-webkit-scrollbar-thumb:window-inactive {
-	background:#f8f9fa; 
-}
+.wrapper {
+    display: flex;
+    width: 100%;
+    align-items: stretch;
+    flex-direction: row-reverse;
+  }
+  
+  #sidebar {
+    color: #fff;
+    transition: all 0.3s;
+    z-index: 2;
+  }
+  
+  #sidebar.active {
+    margin-right: -333px;
+    box-shadow: none;
+  }
+  
+  #sidebar .sidebar-header {
+    padding: 20px;
+    background: #6d7fcc;
+  }
+  
+  #sidebar ul.components {
+    padding: 20px 0;
+    border-bottom: 1px solid #47748b;
+  }
+  
+  #sidebar ul p {
+    color: #fff;
+    padding: 10px;
+  }
+  
+  #sidebar ul li a {
+    padding: 10px;
+    font-size: 1.1em;
+    display: block;
+  }
+  
+  #sidebar ul li a:hover {
+    color: #7386d5;
+    background: #fff;
+  }
+  
+  #sidebar ul li.active > a,
+  a[aria-expanded="true"] {
+    color: #fff;
+    background: #6d7fcc;
+  }
+  
+  a[data-toggle="collapse"] {
+    position: relative;
+  }
+  
+  .dropdown-toggle::after {
+    display: block;
+    position: absolute;
+    top: 50%;
+    right: 20px;
+    transform: translateY(-50%);
+  }
+  
+  ul ul a {
+    font-size: 0.9em !important;
+    padding-left: 30px !important;
+    background: #6d7fcc;
+  }
+  
+  ul.CTAs {
+    padding: 20px;
+  }
+  
+  ul.CTAs a {
+    text-align: center;
+    font-size: 0.9em !important;
+    display: block;
+    border-radius: 5px;
+    margin-bottom: 5px;
+  }
+  
+  a.download {
+    background: #fff;
+    color: #7386d5;
+  }
+  
+  a.article,
+  a.article:hover {
+    background: #6d7fcc !important;
+    color: #fff !important;
+  }
+  
+  /* ---------------------------------------------------
+      CONTENT STYLE
+  ----------------------------------------------------- */
+  
+  #content {
+    width: 100%;
+    min-height: 100vh;
+    transition: all 0.3s;
+  }
+  
+  /* ---------------------------------------------------
+      MEDIAQUERIES
+  ----------------------------------------------------- */
+  
+  @media (max-width: 768px) {
+    #sidebar {
+      margin-right: -333px;
+    }
+    #sidebar.active {
+      margin-left: 0;
+    }
+    #sidebarCollapse span {
+      display: none;
+    }
+  }
+
+  #nav-tab1{
+    width: 100%;
+    z-index: 1;
+  }
